Fixed footer gap in Mobile view.

--- a/assets/less/oc.less
+++ b/assets/less/oc.less
@@ -278,7 +278,6 @@ input[type="submit"] {
 .oc-footer-small {
   text-align: center;
   background-color: @oc-magenta;
-  height: 64px;
   line-height: 64px;
   color: @oc-grey;
 }
